@@ -19,6 +19,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11169: compileall module uses repr() to format filenames and paths to
+  escape surrogate characters and show spaces.
+
 - Issue #11089: Fix performance issue limiting the use of ConfigParser()
   with large config files.
 
